# k4RecTrackerFitter

Tracking/: CMakeLists.txt
Tracking/components/: GGTF_tracking.cpp  GenFit2DCHFitter.cpp
Tracking/fitter/: fit_ggtf_tracks.cpp
Tracking/src/: SimTo3DHits.cpp
Tracking/test/testTrackFinder/: Noddsim_track_test.sh  cglenn.cc  ddsim_local.sh  generate_joblist.py  joblist.txt  k4rt_env.sh  local_chain.sh  pack_k4rt_runtime.sh  runDCHTestTrackFinder.py  runTestTrackFinder.py  run_dch_chain.sh  submit_dch_chain.jdl  test_trackFinder.sh  testcondor.sh
